<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_menu"
        android:title="@string/home"
        android:icon="@drawable/ic_home_"/>
    <item
        android:id="@+id/history_menu"
        android:title="@string/history"
        android:icon="@drawable/ic_history"/>
    <item
        android:id="@+id/scheduler_menu"
        android:title="@string/scheduler"
        android:icon="@drawable/ic_av_timer_black_24dp"/>
    <item
        android:id="@+id/favorite_menu"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite"/>
    <item
        android:id="@+id/account_menu"
        android:title="@string/account"
        android:icon="@drawable/ic_account"/>

</menu>
